package de.uniluebeck.itm.tr.runtime.portalapp.protobuf;

message Envelope {

  enum BodyType {
    MESSAGE = 1;
    REQUEST_STATUS = 2;
    SECRET_RESERVATION_KEYS = 3;
  }

  required BodyType body_type = 1;

  optional Message message = 2;
  optional RequestStatus requestStatus = 3;
  optional SecretReservationKeys secretReservationKeys = 4;

}

message SecretReservationKeys {

  message SecretReservationKey {
    required string urn_prefix = 1;
    required string key = 2;
  }

  repeated SecretReservationKey keys = 1;
}

message Message {

  enum Type {
    NODE_TEXT = 1;
    NODE_BINARY = 2;
    BACKEND = 3;
  }

  enum Level {
    TRACE = 1;
    DEBUG = 2;
    INFO = 3;
    WARN = 4;
    ERROR = 5;
    FATAL = 6;
  }

  message NodeText {
    required string source_node_urn = 1;
    required Level level = 2;
    required string text = 3;
  }

  message NodeBinary {
    required string source_node_urn = 1;
    required uint32 type = 2;
    required bytes data = 3;
  }

  message Backend {
    required Level level = 1;
    required string text = 2;
  }

  required Type type = 1;
  required string timestamp = 2;
  optional NodeBinary node_binary = 3;
  optional NodeText node_text = 4;
  optional Backend backend = 5;
}

message RequestStatus {

  message Status {
    required string node_urn = 1;
    required int32 value = 2;
    optional string message = 3;
  }

  required string request_id = 1;
  repeated Status status = 2;

}
